--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -6,8 +6,8 @@ After=network.target
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__INSTALL_DIR__
-Environment="PATH=__ENV_PATH__"
+WorkingDirectory=__INSTALL_DIR__/
+Environment="PATH=__PATH_WITH_NODEJS__"
 Environment="NODE_ENV=production"
 ExecStart=__INSTALL_DIR__/bin/ethercalc --host 127.0.0.1 --port __PORT__ --expire __EXPIRE__ --polling
 #--basepath /path/prefix
